<resources>
    <string name="app_name">MusicBuddy</string>
    <string name="search_hint">Поиск по трекам или артистам</string>
    <string name="settings">Настройки</string>
    <string name="play">Воспроизвести</string>
    <string name="pause">Пауза</string>
    <string name="save">Сохранить</string>
    <string name="theme">Тема</string>
    <string name="language">Язык</string>
    <string name="theme_light">Светлая</string>
    <string name="theme_dark">Тёмная</string>
    <string name="theme_system">Системная</string>
    <string name="time_zero">00:00</string>
    <string name="prev">Назад</string>
    <string name="next">Вперёд</string>
    <string name="settings_applied">Настройки применены</string>
    <string name="no_tracks">Нет доступных треков</string>
    <string name="next_track_not_found">Следующий трек не найден</string>
    <string name="track_url_empty">URL трека пуст</string>
    <string name="load_error">Ошибка загрузки</string>
    <string name="player_error">Ошибка плеера</string>
    <string name="playback_error">Ошибка воспроизведения</string>
    <string name="cant_start">Не удалось начать воспроизведение</string>
</resources>
